k8s/apps/nginx-ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example_host.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: centarl-grafana-svc
                port:
                  number: 3000
